kubernetes/english-coach/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: english-coach
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - english-coach.pabpereza.dev
      secretName: english-coach-tls
  rules:
    - host: english-coach.pabpereza.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: english-coach
                port:
                  number: 80
